--- a/drama.html
+++ b/drama.html
@@ -67,7 +67,7 @@
 
 <div class="dramas">
     <div class="row">
-        <div class="dr"><p class="nadpis_film">Pravda(2019),Francúzsko</p><div class="info"><img class="film_obr" src="https://www.cine-max.sk/fileadmin/_processed_/f/5/csm_pravda-00_24e60e60af.jpg" alt="obrazok filmu"><div class="info_text"><p>asdfaffa</p></div></div></div>
+        <div class="dr"><p class="nadpis_film">Pravda(2019),Francúzsko</p><div class="info"><img class="film_obr" src="https://www.cine-max.sk/fileadmin/_processed_/f/5/csm_pravda-00_24e60e60af.jpg" alt="obrazok filmu"><div class="info_text"><h5><br><br><br>Filmová ikona Fabienne má dcéru Lumir, ktorá je scenáristkou v New Yorku. Keď táto veľká herečka vydá knihu pamätí, Lumir sa spolu s rodinou vráti do rodičovského domu. Stretnutie sa však rýchlo zmení na konfrontáciu: pred zrakom ohromených členov rodiny sa odhaľujú utajené pravdy, nepriznaná nevraživosť, nemožné lásky. Fabienne natáča sci-fi film, v ktorom hrá...</h5></div></div></div>
         <div class="dr"><p class="nadpis_film">Corpus Christi(2019),Poľsko</p><img class="film_obr" src="https://www.cine-max.sk/fileadmin/_processed_/1/3/csm_corpus-christi-00_0c30689aa9.jpg" alt="obrazok filmu"></div>
         <div class="dr"><p class="nadpis_film">Kto si myslíš, že som(2019),Francúzsko</p><img class="film_obr" src="https://www.cine-max.sk/fileadmin/_processed_/1/b/csm_kto-si-myslis-ze-som-00_8b0b6a1b43.jpg" alt="obrazok filmu"></div>
         <div class="dr"><p class="nadpis_film">Predtuchy(2020),Ukrajina,Litva,Sk</p><img class="film_obr" src="https://www.cine-max.sk/fileadmin/_processed_/1/f/csm_film-plakat-predtuchy_aa0995b0b1.jpg" alt="obrazok filmu"></div>
