vytiahnutie filmov z databazy a generovanie kodu na zobrazenie na stranku

--- a/o_nas.html
+++ b/o_nas.html
@@ -33,7 +33,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Akčné</a>
-                    <a class="dropdown-item" href="drama.html">Dráma</a>
+                    <a class="dropdown-item" href="drama.php">Dráma</a>
                     <a class="dropdown-item" href="#">Romantické</a>
                 </div>
             </li>
